--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-    font-family: 'Raleway', sans-serif;
+@layer base {
+    html {
+        font-family: "Raleway", sans-serif;
+    }
 }
